# tiflis-code

./: .gitignore  .npmrc  AGENTS.md  AGENT_SELECTION_TEST_SCENARIOS.md  AUTONOMOUS_DEVELOPMENT_ARCHITECTURE_v2.md  BACKLOG_UI_SPECIFICATION.md  CLAUDE.md  FEATURE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN-CHAT-COMPONENT.md  PRIVACY.md  PROTOCOL.md  README.md  READY_FOR_IMPLEMENTATION.md  TERMINAL_KEYBOARD_TODO.md  TERMS.md  WINDOWS_INSTALLATION.md  package.json  pnpm-lock.yaml
.changeset/: busy-pigs-make.md  config.json  fix-scope-to-tiflis-io.md  initial-tunnel-release.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy-tunnel.yml  release.yml  screenshots.yml  tiflis-tunnel-ci.yml  tiflis-tunnel-release.yml
.opencode/: opencode.json
.opencode/agent/: bash-scripter.md  code-reviewer.md  debugger.md  devops-engineer.md  documentation-engineer.md  kotlin-specialist.md  python-ml-engineer.md  qa-expert.md  refactoring-specialist.md  security-auditor.md  swift-expert.md  tiflis-orchestrator.md  typescript-pro.md
apps/TiflisCode/: README.md  project.yml
apps/TiflisCode/Shared/: WatchConnectivityProtocol.swift
apps/TiflisCode/Shared/Domain/Models/: AgentType.swift  CommandSendError.swift  ConfigModels.swift  ConnectionState.swift  DemoData.swift  Message.swift  MessageContentBlock.swift  Session.swift  WebSocketMessage.swift
apps/TiflisCode/Shared/Services/Audio/: AudioPlayerService.swift  AudioRecorderService.swift
apps/TiflisCode/TiflisCode.xcodeproj/: project.pbxproj
apps/TiflisCode/TiflisCode/App/: ContentView.swift  TiflisCodeApp.swift
apps/TiflisCode/TiflisCode/Resources/: Info.plist
apps/TiflisCode/TiflisCode/Services/: WatchConnectivityManager.swift
apps/TiflisCode/TiflisCodeTests/: TiflisCodeTests.swift
apps/TiflisCode/TiflisCodeUITests/: ScreenshotTests.swift  TiflisCodeUITests.swift
apps/TiflisCode/TiflisCodeWatch/App/: TiflisCodeWatchApp.swift
apps/TiflisCode/TiflisCodeWatch/Resources/: Info.plist  TiflisCodeWatch.entitlements
apps/TiflisCode/TiflisCodeWatch/Services/: HTTPPollingService.swift  WatchAudioCache.swift  WatchAudioService.swift  WatchConnectionService.swift  WatchConnectivityManager.swift
apps/TiflisCode/TiflisCodeWatch/State/: WatchAppState.swift
apps/TiflisCode/TiflisCodeWatch/Views/: WatchChatView.swift  WatchMainView.swift  WatchMessageRow.swift  WatchRootView.swift  WatchSessionListView.swift  WatchSetupView.swift  WatchVoiceButton.swift
apps/TiflisCode/TiflisCodeWatchUITests/: WatchScreenshotTests.swift
apps/TiflisCode/fastlane/: Fastfile  Gemfile  Snapfile
apps/TiflisCodeAndroid/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/TiflisCodeAndroid/app/: build.gradle.kts  proguard-rules.pro
apps/TiflisCodeAndroid/fastlane/: Fastfile  Gemfile  Screengrabfile
apps/TiflisCodeAndroid/gradle/: libs.versions.toml
apps/tiflis-tunnel/: .env.example  .gitignore  Cargo.toml  Cargo.toml.test-deps  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TESTING.md  client.example.toml  config.example.toml  docker-compose.yml
apps/tiflis-tunnel/.cargo/: config.toml
apps/tiflis-tunnel/crates/tunnel-client/: Cargo.toml
apps/tiflis-tunnel/crates/tunnel-client/src/: client.rs  config.rs  connection.rs  lib.rs  main.rs  proxy.rs  reconnect.rs
apps/tiflis-tunnel/crates/tunnel-core/: Cargo.toml
apps/tiflis-tunnel/crates/tunnel-core/src/: codec.rs  error.rs  lib.rs  protocol.rs  quic.rs
apps/tiflis-tunnel/crates/tunnel-core/tests/: integration_tests.rs
apps/tiflis-tunnel/crates/tunnel-server/: Cargo.toml
apps/tiflis-tunnel/crates/tunnel-server/src/: config.rs  lib.rs  main.rs  pending.rs  proxy.rs  registry.rs  server.rs
apps/tiflis-tunnel/tests/: Cargo.toml  e2e_acme.rs  e2e_basic.rs  e2e_http_proxy.rs  e2e_registration.rs  e2e_reliability.rs  e2e_restart.rs  e2e_sse.rs  e2e_websocket.rs
apps/tiflis-tunnel/tests/common/: mod.rs
apps/tiflis-tunnel/tests/integration/: common.rs
assets/branding/: ascii-art.txt  update-logo.md
docs/: AGENT_CHAT_INTEGRATION_PLAN.md  APP_STORE_MATERIALS.md  BACKLOG_AGENT_INTERACTIVE_SELECTION.md  CICD_AND_RELEASE.md  DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  MOBILE_APP_LOGIC.md  OPENCODE_SETUP.md  PUBLISHING_QUICKSTART.md  RELEASE_PROCESS.md  RELEASE_SIMPLE.md  RELEASE_SIMPLIFICATION.md  RUST_TUNNEL_MIGRATION_PLAN.md  SCREENSHOT_AUTOMATION.md  SWIFT-TERM-IPHONE-BEST-PRACTICE.md  TERMINAL_IMPLEMENTATION.md  TERMINAL_OPTIMIZATION_PLAN.md  TUNNEL_ARCHITECTURE_PLAN.md  TYPESCRIPT_SERVER_STACK.md  WEBSOCKET_CONNECTION_IMPLEMENTATION.md
scripts/: README_SPEECH.md  install-speech-services.sh  install-tunnel.bat  install-tunnel.ps1  install-tunnel.sh  install-workstation.bat  install-workstation.ps1  install-workstation.sh  screenshot-test-env.sh  uninstall-speech-services.sh  update-speech-services.sh
scripts/lib/: common.sh  detect.sh  node.sh  service.sh
scripts/templates/speech/: env.template
scripts/templates/tunnel/: docker-compose.yml  env.template  io.tiflis.tunnel.plist  tiflis-tunnel.service
scripts/templates/workstation/: env.template  io.tiflis.workstation.plist  tiflis-workstation.service
services/stt/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
services/stt/src/: __init__.py  config.py  main.py
services/stt/src/api/: __init__.py  routes.py
services/stt/src/cli/: __init__.py  main.py
services/stt/src/services/: __init__.py  audio_capture.py  model_manager.py  vad.py
services/stt/src/transcribers/: __init__.py  base.py  factory.py  faster.py  mlx.py
services/stt/src/utils/: __init__.py  platform_detect.py  stats.py  ui.py
services/stt/tests/: __init__.py
services/tts/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
services/tts/src/: __init__.py  config.py  main.py
services/tts/src/api/: routes.py
services/tts/src/schemas/: __init__.py  tts.py
services/tts/src/services/: kokoro_service.py
services/tts/tests/: __init__.py
(+117 files in other folders)
