# Copyright (c) 2026 Roman Barinov <rbarinov@gmail.com>
# Licensed under the FSL-1.1-NC.

[workspace]
resolver = "2"
members = [
    "crates/tunnel-core",
    "crates/tunnel-server",
    "crates/tunnel-client", "tests",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "FSL-1.1-NC"
authors = ["Roman Barinov <rbarinov@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"

# QUIC - using ring crypto backend for cross-compilation compatibility
quinn = { version = "0.11", default-features = false, features = ["ring", "runtime-tokio", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ACME/Let's Encrypt - use ring backend (aws-lc-rs fails on musl cross-compilation)
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
x509-parser = "0.16"
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http1", "http2", "tls12"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Configuration
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client - using rustls-tls with ring backend
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots", "stream"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.9"
futures = "0.3"
rand = "0.8"
