[project]
name = "tiflis-code-stt"
version = "1.0.0"
description = "OpenAI-compatible Speech-to-Text API with MLX and faster-whisper backends"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "FSL-1.1-NC"}
authors = [{name = "Roman Barinov", email = "rbarinov@gmail.com"}]
keywords = ["stt", "speech-to-text", "whisper", "mlx", "transcription", "openai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "scipy>=1.10.0",
    "huggingface-hub>=0.20.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
mlx = [
    "mlx-whisper>=0.4.0",
    "torch>=2.0.0",
    "silero-vad>=5.0",
]
cuda = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "silero-vad>=5.0",
]
cpu = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "silero-vad>=5.0",
]
cli = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "sounddevice>=0.4.6",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
tiflis-stt = "src.main:main"
tiflis-stt-cli = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/tiflis-io/tiflis-code"
Repository = "https://github.com/tiflis-io/tiflis-code"
Documentation = "https://github.com/tiflis-io/tiflis-code#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
