[project]
name = "tiflis-code-tts"
version = "1.0.0"
description = "OpenAI-compatible Text-to-Speech API using Kokoro"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "FSL-1.1-NC"}
authors = [{name = "Roman Barinov", email = "rbarinov@gmail.com"}]
keywords = ["tts", "text-to-speech", "kokoro", "speech-synthesis", "openai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "kokoro>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
tiflis-tts = "src.main:main"

[project.urls]
Homepage = "https://github.com/tiflis-io/tiflis-code"
Repository = "https://github.com/tiflis-io/tiflis-code"
Documentation = "https://github.com/tiflis-io/tiflis-code#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
