# Copyright (c) 2026 Roman Barinov <rbarinov@gmail.com>
# Licensed under the FSL-1.1-NC.

[package]
name = "tunnel-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "tunnel-server"
path = "src/main.rs"

[lib]
name = "tunnel_server"
path = "src/lib.rs"

[dependencies]
tunnel-core = { path = "../tunnel-core" }

tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
instant-acme = { workspace = true }
x509-parser = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = { workspace = true }
futures = { workspace = true }
rcgen = "0.13"
